[WebApi] Finished Implementing UndertowWebServer